# SelfBot-Test

./: .env  main.py  pyproject.toml
